~ Disabled click blue effect for mobile devices ~ Changed player model and added jump in, jump out between transition ~ Changed other character animations to always play idle ~ Fixed fadeout effect not showing up for slider and likert7 UI ~ Removed slider bouncy animation movement on scene change ~ Changed father character ~ Smooth camera in and out movement while transition ~ Quick character movement animation transition than before

--- a/src/style.css
+++ b/src/style.css
@@ -23,7 +23,10 @@ canvas.webgl{
     z-index: 1;
 }
 
-
+* { 
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -moz-tap-highlight-color: rgba(0, 0, 0, 0);
+}
 
 
 /* styling for loading page */
@@ -512,14 +515,14 @@ canvas.webgl{
 }
 
 @keyframes sliderContainerFadeIn {
-    0% {bottom: 18%; opacity: 0.5; }
-    80% { bottom: 22%; opacity: 1; }
-    100% { bottom: 20%; opacity: 1; }
+    0% { opacity: 0; }    /* 0% {bottom: 18%; opacity: 0.5; }  */
+    /* 80% { opacity: 1; }      80% { bottom: 22%; opacity: 1; } */
+    100% { opacity: 1; }   /*   100% { bottom: 20%; opacity: 1; } */
 }
 
 @keyframes sliderContainerFadeOut {
-    0% { bottom: 20%; opacity: 1; }
-    100% { bottom: 17%; opacity: 0; }
+    0% { opacity: 1; }     /* 0% { bottom: 20%; opacity: 1; } */     
+    100% { opacity: 0; }   /*  100% { bottom: 17%; opacity: 0; } */
 }
 
 
@@ -801,9 +804,9 @@ canvas.webgl{
 /* #endregion */
 
   /* Setting radio button size while hovering */
-  form #likert5-slider label:hover::after {
+  /* form #likert5-slider label:hover::after {
     transform: translate(-50%, -50%) scale(1.25);
-  }
+  } */
   form #likert5-slider input {
     display: none;
   }
@@ -844,7 +847,6 @@ canvas.webgl{
     width: 25px;
     height: 25px;
   }
-
   /* Checked Dot */
   form #likert5-slider #likert5-pointer {   
     display: block;
@@ -1629,6 +1631,10 @@ canvas.webgl{
 }
 
 @media (hover: hover) {
+    form #likert5-slider label:hover::after {
+        transform: translate(-50%, -50%) scale(1.25);
+      }
+      
     .control-button:hover{
     }
     .answer-box:hover{
